--- a/Calculator_UnitTest/Calculator_UnitTest.vcxproj
+++ b/Calculator_UnitTest/Calculator_UnitTest.vcxproj
@@ -160,7 +160,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="unittest1.cpp" />
+    <ClCompile Include="unittestLib.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Calculator_Library\Calculator_Library.vcxproj">
